fix signup button too small

--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ nav a:hover {
 
 .signup-box{
     background-color: var(--primary-color);
-    padding: 40px;
+    padding: 20px;
     width: 70%;
     height: 40%;
     border-radius: 15px;
@@ -232,7 +232,10 @@ nav a:hover {
     margin-bottom: 5px;
 }
 .signup-box button{
-   padding: 5px 10px;
+   /* padding: 10px 10px;
+    */
+    height: 50%;
+    width: 20%;
    font-size: 18px;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
